tests/functional/python_tests/cpp_example_tests/cpp_functions.hpp

#ifdef __cplusplus
extern "C" {
#endif

int multiplication(int int_param, int float_param);

unsigned int get_sum_from_int_array( unsigned int* arr, unsigned int size );

unsigned int get_str_length( char* str );

#ifdef __cplusplus
}
#endif